--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,7 +12,7 @@
     flex: 14;
     display: flex;
     flex-direction: column;
-    align-content: center;
+    align-items: center;
     justify-content: center;
     box-sizing: border-box;
     overflow: hidden;
