--- a/src/page/Home/Home.module.scss
+++ b/src/page/Home/Home.module.scss
@@ -6,8 +6,12 @@
     grid-template-columns: 0fr 3fr 1.5fr; /* 左收縮 中間大 右小 */
     grid-template-rows: 1fr;
     gap: 0;
-    background: var(--bg-section);
+    // background: var(--bg-section);
     transition: grid-template-columns 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+
+    &.fade-in {
+        animation: fade-in 0.5s ease-in-out;
+    }
 }
 
 .container.sidebarExpanded {
@@ -28,4 +32,15 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+@keyframes fade-in {
+    from {
+        transform: translateY(-10px);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
