--- a/src/layout/GeneralLayout.module.scss
+++ b/src/layout/GeneralLayout.module.scss
@@ -3,8 +3,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100dvh;
-    width: 100dvw;
+    height: fit-content;
+    width: 100vw;
     background-color: var(--bg-primary);
     padding: 1rem;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
