--- a/src/page/Home/components/Chat/Chat.module.css
+++ b/src/page/Home/components/Chat/Chat.module.css
@@ -57,11 +57,13 @@
     width: 100%;
     /* height: 10rem; */
     padding: 1rem;
-    background: gray;
+    background: rgb(78, 78, 78);
     border: 2px solid var(--border-section);
     border-radius: 0.7rem;
     overflow-y: auto;
     scrollbar-width: none;
+    white-space: pre-wrap;
+
     /* overflow-x: hidden; */
 }
 
