--- a/src/page/Home/components/CodeField/CodeField.module.css
+++ b/src/page/Home/components/CodeField/CodeField.module.css
@@ -1,3 +1,9 @@
 .container {
-    flex: 4;
+    height: fit-content;
+    /* flex: 4; */
+    /* overflow: auto; */
+}
+
+.codeArea {
+    /* top: 0; */
 }
