--- a/src/page/Home/Home.module.scss
+++ b/src/page/Home/Home.module.scss
@@ -11,8 +11,18 @@
     transition: grid-template-columns 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
     animation: fade-in 0.5s ease-in-out;
 
+    .sidebar, .chat {
+        height: 100vh;
+        position: fixed;
+        top: 0;       // ★ 讓它們黏在上方
+        min-width: 4.5rem;
+        z-index: 10;      // 可選，確保在上層
+        overflow: hidden; // 可選
+    }
+
     .sidebar {
         width: 4.5rem;
+        transition: left 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
     }
 
     .chat {
@@ -24,7 +34,7 @@
     .mainContent {
         padding-inline: 0.5rem;
         position: relative;
-        width: calc(100vw - 44rem);
+        width: calc(100vw - 31rem);
         left: 4.5rem;
         flex: 1;
         top: 0;
@@ -36,22 +46,15 @@
     .sidebar {
         width: 18rem;
         left: 0;
+        transition: left 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
     }
     .mainContent{
+        width: calc(100vw - 44rem);
         left: 17rem;
         transition: left 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
     }
 }
 
-.sidebar, .chat {
-    height: 100vh;
-    position: fixed;
-    top: 0;       // ★ 讓它們黏在上方
-    min-width: 4.5rem;
-    z-index: 10;      // 可選，確保在上層
-    // background: #181a1b; // 可選，避免透明
-    overflow: hidden; // 可選
-}
 
 
 
