--- a/src/page/Home/components/Sidebar/Sidebar.module.scss
+++ b/src/page/Home/components/Sidebar/Sidebar.module.scss
@@ -18,6 +18,13 @@
     color: var(--text-primary);
 }
 
+.greeting {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.5rem;
+    font-size: 1.2rem;
+}
 .topbar button {
     width: 3rem;
     height: 3rem;
