--- a/src/page/Selector/Selector.module.scss
+++ b/src/page/Selector/Selector.module.scss
@@ -1,3 +1,14 @@
+.selector {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 95vh;
+    gap: 2rem;
+    background-color: var(--bg-page);
+    overflow: hidden;
+}
+
 .container {
     display: flex;
     flex-direction: column;
