--- a/src/page/Home/components/Chat/Chat.module.css
+++ b/src/page/Home/components/Chat/Chat.module.css
@@ -55,8 +55,9 @@
 
 .textarea {
     width: 100%;
-    /* height: 10rem; */
-    padding: 1rem;
+    height: 40vh;
+    padding-block: 0.5rem;
+    padding-inline: 2rem;
     background: rgb(78, 78, 78);
     border: 2px solid var(--border-section);
     border-radius: 0.7rem;
