--- a/src/page/Home/components/Sidebar/Sidebar.module.scss
+++ b/src/page/Home/components/Sidebar/Sidebar.module.scss
@@ -92,3 +92,16 @@
         color: var(--text-primary);
     }
 }
+
+.fileTree {
+    flex: 1;
+    overflow: auto;
+    max-width: 21rem;
+    max-height: 50rem;
+    // background: var(--bg-section);
+    // border: 2px solid var(--border-section);
+    border-radius: 7px;
+    // padding-inline: 1rem;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
