--- a/src/page/Home/Home.module.scss
+++ b/src/page/Home/Home.module.scss
@@ -2,39 +2,10 @@
     box-sizing: border-box;
     width: 100%;
     display: grid;
+    grid-column: auto;
     overflow-x: hidden;
-    gap: 0;
-    animation: fade-in 0.5s ease-in-out;
-
-    .sidebar, .chat {
-        height: 100vh;
-        position: fixed;
-        top: 0;       // ★ 讓它們黏在上方
-        min-width: 4.5rem;
-        z-index: 10;      // 可選，確保在上層
-        overflow: hidden; // 可選
-    }
-
-    .sidebar {
-        width: 4.5rem;
-        transition: left 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    }
-
-    .chat {
-        right: 0;
-        width: 25rem;
-        transition: left 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    }
-
-    .mainContent {
-        padding-inline: 0.5rem;
-        position: relative;
-        width: calc(100vw - 31rem);
-        left: 4.5rem;
-        flex: 1;
-        top: 0;
-        height: fit-content;
-    }
+    gap: 1rem;
+    animation: fade-in 0.5s ease-in-out
 }
 
 .container.sidebarExpanded {
@@ -49,9 +20,6 @@
         transition: left 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
     }
 }
-
-
-
 
 
 @keyframes fade-in {
