feat: repo overview & filetree

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   
 }
 body {
-  background-image: url('/bg-code.svg');
+  /* background-image: url('/bg-code.svg'); */
   background-size: 100vw 100vw;
   background-repeat: repeat;
   background-attachment: fixed;
