--- a/src/page/Home/components/Overview/Overview.module.scss
+++ b/src/page/Home/components/Overview/Overview.module.scss
@@ -17,7 +17,7 @@
     width: 100%;
     padding: 1rem;
 
-    background: rgb(78, 78, 78);
+    // background: rgb(78, 78, 78);
     border: 2px solid var(--border-section);
     border-radius: 7px;
     overflow-y: auto;
