--- a/src/page/Home/SubPage/Commit/Commit.module.scss
+++ b/src/page/Home/SubPage/Commit/Commit.module.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    justify-content: space-around;
+    justify-content: center;
     width: 100%;
+    gap: 2rem;
 }
