--- a/src/page/Home/SubPage/TechDebt/TechDebt.module.scss
+++ b/src/page/Home/SubPage/TechDebt/TechDebt.module.scss
@@ -1,48 +1,46 @@
-.summary {
-    max-width: 45%;
-    height: 100%;
-    padding: 1rem;
-    flex: 1;
-    overflow-x: auto;
+.container {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    color: white;
-    gap: 0.5rem;
-}
-
-.textarea {
+    justify-content: space-around;
     width: 100%;
-    padding: 2rem;
 
-    // background: rgb(78, 78, 78);
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding: 1rem;
     border: 2px solid var(--border-section);
     border-radius: 7px;
-    overflow-y: auto;
-    scrollbar-width: none;
-    white-space: pre-wrap;
+    
 
+
+    h3 {
+        margin-bottom: 1.5rem;
+    }
 
     :global {
         h1, h2, h3, h4, h5, h6 {
             margin-top: 1.5rem;
             margin-bottom: 0.5rem;
             font-weight: bold;
+            color: white
         }
 
         p {
             margin-bottom: 1rem;
             line-height: 1.6;
+            color: white
         }
 
         ul, ol {
             margin-left: 2rem;
             margin-bottom: 1rem;
             padding-left: 1rem;
+            color: white
         }
 
         li {
             margin-bottom: 0.5rem;
+            color: white
         }
 
         code {
