--- a/src/page/Home/components/Navigator/Navigator.module.scss
+++ b/src/page/Home/components/Navigator/Navigator.module.scss
@@ -14,7 +14,7 @@
     height: 4rem;
     color: white;
     padding: 1rem 1.5rem;
-    background: transparent;
+    background: #2b2b33;
     border: 2px solid var(--border-section);
     border-radius: 7px;
     text-align: center;
