--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 :root {
   font-family: 'Inter', system-ui, Avenir, Helvetica, Arial, sans-serif;
-  background: var(--bg-primary);
+  background: var(--bg-gradient);
 }
 
 * {
@@ -10,7 +10,7 @@
   margin: 0;
   padding: 0;
   border: 0;
-  
+  overscroll-behavior: none;
 }
 body {
   /* background-image: url('/bg-code.svg'); */
@@ -18,4 +18,25 @@ body {
   background-repeat: repeat;
   background-attachment: fixed;
   overflow-x: hidden;
+  /* Webkit browsers (Chrome, Safari, Edge) */
+  scrollbar-width: thin;
+  scrollbar-color: transparent;
+}
+
+body::-webkit-scrollbar {
+    width: 8px;
+}
+
+body::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: var(--border-section);
+    border-radius: 10px;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
