--- a/src/page/Home/SubPage/TechDebt/TechDebt.module.scss
+++ b/src/page/Home/SubPage/TechDebt/TechDebt.module.scss
@@ -3,10 +3,9 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-around;
-    width: 100%;
+    // width: full;
 
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin: 1rem;
     padding: 1rem;
     border: 2px solid var(--border-section);
     border-radius: 7px;
