--- a/src/page/Home/components/Sidebar/Sidebar.module.scss
+++ b/src/page/Home/components/Sidebar/Sidebar.module.scss
@@ -24,14 +24,6 @@
     gap: 0.5rem;
     font-size: 1.2rem;
 }
-.topbar button {
-    width: 3rem;
-    height: 3rem;
-    background: transparent;
-    color: var(--text-primary);
-    border: 2px solid var(--border-section);
-    border-radius: 0.7rem;
-}
 
 .show {
     width: 100%;
@@ -78,12 +70,12 @@
         width: 100%;
         color: white;
         padding: 1rem 1.5rem;
-        background: transparent;
+        background: #2b2b33;
         border: 2px solid var(--border-section);
         border-radius: 7px;
         text-align: center;         // 讓選單內容置中
         text-align-last: center;    
-        font-size: 1rem;
+        font-size: 1.25rem;
     }
 
     option {
