--- a/src/page/Home/Home.module.scss
+++ b/src/page/Home/Home.module.scss
@@ -25,7 +25,7 @@
 }
 
 .mask {
-    // visibility: hidden;   
+    display: none;
     pointer-events: none;
     flex: 1;
     margin: 0;
@@ -37,7 +37,7 @@
     z-index: 10;
 }
 .mask.animating {
-    // visibility: visible;
+    display: block;
     // height: 100%;
     animation: navigate-transition 1s ease-in-out;
 }
@@ -50,7 +50,12 @@
     box-sizing: border-box;
     width: 100%;
     height: 100%;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: flex-start;
+    // justify-content: flex-start;
 }
+
 .content.animating {
     position: absolute;
     top: 0;
