--- a/src/page/Home/SubPage/Commit/Commit.module.scss
+++ b/src/page/Home/SubPage/Commit/Commit.module.scss
@@ -1,8 +1,40 @@
+// .container {
+//     display: flex;
+//     flex-direction: row;
+//     align-items: flex-start;
+//     justify-content: center;
+//     width: 100%;
+//     gap: 2rem;
+//     overflow: hidden;
+// }
+
 .container {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: center;
+    display: grid;
+    grid-template-rows: 0.004fr 1fr;
     width: 100%;
-    gap: 2rem;
+    transition: grid-template-rows 0.3s ease-in-out;
+}
+
+.container.expand {
+    grid-template-rows: 1fr 3fr;
+}
+
+.diff {
+    overflow: hidden;
+    min-height: 0;
+    padding: 1rem;
+    color: white;
+}
+
+.overview {
+    min-height: 0;
+}
+
+.btn {
+    button {
+        background: transparent;
+        border: none;
+        color: gray;
+        cursor: pointer;
+    }
 }
