--- a/src/page/Home/SubPage/Repo/Repo.module.scss
+++ b/src/page/Home/SubPage/Repo/Repo.module.scss
@@ -1,8 +1,39 @@
+// .container {
+//     display: flex;
+//     flex-direction: row;
+//     align-items: flex-start;
+//     justify-content: space-around;
+//     width: 100%; 
+// }
+
 .container {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-around;
+    display: grid;
+    grid-template-rows: 0fr 1fr;
     width: 100%;
-    
+    transition: grid-template-rows 0.3s ease-in-out;
+        overflow: hidden;
+}
+
+.container.expand {
+    grid-template-rows: 1fr 3fr;
+}
+
+.fileTree {
+    overflow: hidden;
+    min-height: 3rem;
+    padding: 1rem;
+    color: white;
+}
+
+.overview {
+    min-height: 0;
+}
+
+.btn {
+    button {
+        background: transparent;
+        border: none;
+        color: gray;
+        cursor: pointer;
+    }
 }
