--- a/src/page/Home/SubPage/Commit/Commit.module.scss
+++ b/src/page/Home/SubPage/Commit/Commit.module.scss
@@ -10,7 +10,7 @@
 
 .container {
     display: grid;
-    grid-template-rows: 0.004fr 1fr;
+    grid-template-rows: 0fr 1fr;
     width: 100%;
     transition: grid-template-rows 0.3s ease-in-out;
 }
@@ -21,7 +21,7 @@
 
 .diff {
     overflow: hidden;
-    min-height: 0;
+    min-height: 3rem;
     padding: 1rem;
     color: white;
 }
