--- a/src/page/Home/components/Overview/Overview.module.scss
+++ b/src/page/Home/components/Overview/Overview.module.scss
@@ -11,6 +11,9 @@
 }
 
 .textarea {
+    border-radius: 7px;
+    border: 2px solid var(--border-section);
+    padding: 1rem;
 
     h1, h2, h3, h4 {
         margin-top: 1rem;
