--- a/src/page/Home/components/Sidebar/Sidebar.module.scss
+++ b/src/page/Home/components/Sidebar/Sidebar.module.scss
@@ -25,6 +25,24 @@
     font-size: 1.2rem;
 }
 
+.chatBtn {
+    background: var(--bg-section);
+    position: absolute;
+    right: 1rem;
+    z-index: 11;
+
+    padding: 0.5rem 1rem;
+    border: 2px solid var(--border-section);
+    border-radius: 7px;
+
+    &:hover {
+        cursor: pointer;
+        // scale: 1.05;
+        animation: hover 0.3s ease-in forwards;
+        // scale: 1.05;
+    }
+}
+
 .show {
     width: 100%;
     height: 100%;
@@ -95,4 +113,17 @@
     // padding-inline: 1rem;
     scrollbar-width: none;
     -ms-overflow-style: none;
+}
+
+
+@keyframes hover {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(0.95);
+    }
+    100% {
+        transform: scale(1.05);
+    }
 }
