--- a/src/page/Home/components/Navigator/Navigator.module.scss
+++ b/src/page/Home/components/Navigator/Navigator.module.scss
@@ -2,11 +2,31 @@
     width: 100%;
     // height: calc(fit-content + 2rem);
     display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    // gap: 0.5rem;
+    padding: 1rem;
+
+    label {
+        font-size: 1rem;
+        color: var(--text-primary);
+        position: relative;
+        margin-bottom: 0.5rem;
+    }
+
+    
+}
+
+.row {
+    // margin-top: 2rem;
+    width: 100%;
+    display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
     gap: 1rem;
-    padding: 0.5rem 1rem;
+    margin-bottom: 1rem;
 }
 
 .item {
@@ -17,9 +37,12 @@
     background: #2b2b33;
     border: 2px solid var(--border-section);
     border-radius: 7px;
-    text-align: center;
-    text-align-last: center;    
+    display: flex;
+    align-items: center;
+    justify-content: center; 
     font-size: 1.25rem;
+    
+    
 
     &:hover {
         cursor: pointer;
