--- a/src/page/Home/components/Selector/Selector.module.scss
+++ b/src/page/Home/components/Selector/Selector.module.scss
@@ -1,6 +1,6 @@
 .container {
     height: 100%;
-    width: 100%;
+    max-width: 50%;
     display: flex;
     flex-direction: column;
 
@@ -8,66 +8,11 @@
     gap: 1rem;
 }
 
-.topbar {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    color: var(--text-primary);
-}
-
-.greeting {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 0.5rem;
-    font-size: 1.2rem;
-}
-
-.chatBtn {
-    background: var(--bg-section);
-    position: absolute;
-    right: 1rem;
-    z-index: 11;
-
-    padding: 0.5rem 1rem;
-    border: 2px solid var(--border-section);
-    border-radius: 7px;
-
-    &:hover {
-        cursor: pointer;
-        // scale: 1.05;
-        animation: hover 0.3s ease-in forwards;
-        // scale: 1.05;
-    }
-}
-
-.show {
-    width: 100%;
-    height: 100%;
-    padding: 0.5rem;
-    background: transparent;
-    border-right: 2px solid var(--border-section);
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: flex-end;
-}
-
-.show button {
-    width: 3rem;
-    height: 3rem;
-    background: transparent;
-    color: var(--text-primary);
-    border: 2px solid var(--border-section);
-    border-radius: 0.7rem;
-}
-
 .content {
     width: 100%;
+    // left: 50%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     // align-items: flex-end;
     gap: 1rem;
 
@@ -85,6 +30,7 @@
     }
 
     select {
+        height: 4rem;
         width: 100%;
         color: white;
         padding: 1rem 1.5rem;
