--- a/src/page/Home/components/Overview/Overview.module.scss
+++ b/src/page/Home/components/Overview/Overview.module.scss
@@ -1,7 +1,8 @@
 .summary {
     // height: 50%;
     padding: 1rem;
-    flex: 1;
+    // flex: 1;
+    height: fit-content;
     overflow-x: auto;
     display: flex;
     flex-direction: column;
