--- a/src/page/Home/components/FileTree/FileTree.module.scss
+++ b/src/page/Home/components/FileTree/FileTree.module.scss
@@ -5,13 +5,17 @@
   padding: 1rem;
   color: white;
   gap: 0.5rem;
+  border-radius: 7px;
+  border: 2px solid var(--border-section);
+  h3 {
+    margin-bottom: 1rem;
+  }
 }
 
 .container {
   width: 100%;
   /* background: rgb(78, 78, 78); */
-  border-radius: 7px;
-  border: 2px solid var(--border-section);
+
   color: #d4d4d4;
   padding: 1rem;
 }
