--- a/src/page/Home/components/Uml/Uml.module.scss
+++ b/src/page/Home/components/Uml/Uml.module.scss
@@ -1,14 +1,21 @@
 .container {
     width: 100%;
+
+    padding: 1rem;
+    color: white;
+    h3 {
+        margin-bottom: 1rem;
+    }
+}
+.uml {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-
+    border: 2px solid var(--border-section);
+    border-radius: 7px;
     padding: 1rem;
-    h3 {
-        color: white
-    }
     img {
-
+        max-width: 100%;
     }
 }
