--- a/src/page/Home/SubPage/Commit/Commit.module.scss
+++ b/src/page/Home/SubPage/Commit/Commit.module.scss
@@ -10,13 +10,13 @@
 
 .container {
     display: grid;
-    grid-template-rows: 0fr 1fr;
+    grid-template-rows: 0fr auto;
     width: 100%;
     transition: grid-template-rows 0.3s ease-in-out;
 }
 
 .container.expand {
-    grid-template-rows: 1fr 3fr;
+    grid-template-rows: 1fr auto;
 }
 
 .diff {
